--- a/style.css
+++ b/style.css
@@ -67,8 +67,37 @@ h1 {
    transform: rotate(20deg) scale(1.1);
 }
 
+.pet-stats {
+   padding: 0.5em 0 1.5em 0;
+   text-align: center;
+}
+
 .pet-stats-style {
    font-weight: bold;
+}
+
+.buttons {
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+}
+
+.action-button {
+   width: 40%;
+   font-family: 'Montserrat', sans-serif;
+   font-size: 1.125rem;
+   border: none;
+   background-color: white;
+   color: black;
+   border: 2px solid black;
+   border-radius: 5px;
+   padding: 0.5em 0.75em;
+   margin: 0.5em;
+   transition: border-radius 500ms;
+}
+
+.action-button:hover {
+   border-radius: 50px;
 }
 
 @media (min-width: 900px) {
@@ -87,4 +116,12 @@ h1 {
       cursor: pointer;
    }
 
+   .buttons {
+      display: flex;
+      justify-content: space-evenly;
+   }
+
+   .action-button {
+      width: 15%;
+   }
 }
