--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ h1 {
    text-align: center;
    text-decoration: underline;
    cursor: pointer;
+   padding-bottom: 2em;
 }
 
 .start-again:hover {
