--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ h1 {
 
 .pet-emotion {
    display: none;
+   font-style: italic;
 }
 
 .buttons {
@@ -86,7 +87,7 @@ h1 {
    border: none;
    background-color: white;
    color: black;
-   border: 2px solid black;
+   border: 3px solid black;
    border-radius: 5px;
    padding: 0.5em 0.75em;
    margin: 0.5em;
