add progress bar for happiness

--- a/style.css
+++ b/style.css
@@ -68,6 +68,24 @@ h1 {
    font-weight: bold;
 }
 
+progress[value] {
+   display: block;
+   -webkit-appearance: none;
+   appearance: none;
+   margin: 0.2em 0;
+}
+
+progress[value]::-webkit-progress-bar {
+   background-color: #eee;
+   border-radius: 50px;
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
+
+progress[value]::-webkit-progress-value {
+   background-color: forestgreen;
+   border-radius: 50px;
+}
+
 .pet-emotion {
    display: none;
    font-style: italic;
